--- a/fitness/package.json
+++ b/fitness/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-email/components": "^0.0.25",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "resend": "^4.0.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.94.0",
     "webpack-dev-server": "^5.0.4"
@@ -24,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "email dev --dir src/components/Emails"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "react-email": "3.0.1",
     "tailwindcss": "^3.4.10"
   }
 }
